Bug 514817: Update aboutRights content. r=sdwilsh, a=blocking-b6
UltraBlame original commit: c8bf9ce7050667f53c84d4f78d6a8aecd095f598

--- a/toolkit/locales/en-US/chrome/global/aboutRights.dtd
+++ b/toolkit/locales/en-US/chrome/global/aboutRights.dtd
@@ -370,7 +370,9 @@ c
 -
 -
 point
-3
+2
+.
+5
 text
 for
 official
@@ -386,32 +388,127 @@ rights
 .
 intro
 -
-point3a
+point2
+.
+5
 "
-Privacy
-policies
-for
+Some
+features
+in
+&
+brandShortName
+;
+such
+as
+the
+Crash
+Reporter
+give
+you
+the
+option
+to
+provide
+feedback
+to
 &
 vendorShortName
 ;
-'
-s
+.
+By
+choosing
+to
+submit
+feedback
+you
+give
+&
+vendorShortName
+;
+permission
+to
+use
+the
+feedback
+to
+improve
+its
 products
-may
-be
-found
+to
+publish
+the
+feedback
+on
+its
+websites
+and
+to
+distribute
+the
+feedback
+.
+"
+>
+<
+!
+-
+-
+point
+3
+text
+for
+official
+branded
+builds
+-
+-
+>
+<
+!
+ENTITY
+rights2
+.
+intro
+-
+point3a
+"
+How
+we
+use
+your
+personal
+information
+and
+feedback
+submitted
+to
+&
+vendorShortName
+;
+through
+&
+brandShortName
+;
+is
+described
+in
+the
 "
 >
 <
 !
 ENTITY
-rights
+rights2
 .
 intro
 -
 point3b
 "
-here
+&
+brandShortName
+;
+Privacy
+Policy
 "
 >
 <
@@ -481,28 +578,25 @@ builds
 <
 !
 ENTITY
-rights
+rights2
 .
 intro
 -
 point4a
 "
+Some
 &
 brandShortName
 ;
-also
-offers
-optional
+features
+make
+use
+of
 web
-site
+-
+based
 information
 services
-such
-as
-the
-SafeBrowsing
-service
-;
 however
 we
 cannot
@@ -529,6 +623,10 @@ how
 to
 disable
 the
+features
+that
+use
+these
 services
 can
 be
@@ -642,8 +740,46 @@ section
 >
 <
 !
+-
+-
+point
+3
+text
+for
+unbranded
+builds
+-
+-
+>
+<
+!
 ENTITY
 rights
+.
+intro
+-
+point3
+-
+unbranded
+"
+Any
+applicable
+privacy
+policies
+for
+this
+product
+should
+be
+listed
+here
+.
+"
+>
+<
+!
+ENTITY
+rights2
 .
 webservices
 -
@@ -653,7 +789,9 @@ header
 brandFullName
 ;
 Web
-Site
+-
+Based
+Information
 Services
 "
 >
@@ -719,7 +857,7 @@ builds
 <
 !
 ENTITY
-rights
+rights2
 .
 webservices
 -
@@ -730,7 +868,8 @@ brandFullName
 ;
 uses
 web
-site
+-
+based
 information
 services
 (
@@ -742,14 +881,13 @@ Services
 quot
 ;
 )
-such
-as
+to
+provide
+some
+of
 the
-SafeBrowsing
-service
-that
-are
-available
+features
+provided
 for
 your
 use
@@ -761,7 +899,9 @@ of
 &
 brandShortName
 ;
-as
+under
+the
+terms
 described
 below
 .
@@ -772,6 +912,10 @@ not
 want
 to
 use
+one
+or
+more
+of
 the
 Services
 or
@@ -784,27 +928,76 @@ you
 may
 disable
 the
-SafeBrowsing
-service
-by
-opening
-the
-application
-preferences
-selecting
-the
+feature
+or
+Service
+(
+s
+)
+.
+Instructions
+on
+how
+to
+disable
+a
+particular
+feature
+or
+Service
+may
+be
+found
 "
 >
 <
 !
 ENTITY
-rights
+rights2
 .
 webservices
 -
 b
 "
-Security
+here
+"
+>
+<
+!
+ENTITY
+rights2
+.
+webservices
+-
+c
+"
+.
+"
+>
+<
+!
+-
+-
+safe
+browsing
+points
+for
+branded
+builds
+-
+-
+>
+<
+!
+ENTITY
+rights
+.
+safebrowsing
+-
+a
+"
+SafeBrowsing
+:
 "
 >
 <
@@ -812,16 +1005,86 @@ Security
 ENTITY
 rights
 .
-webservices
+safebrowsing
 -
-c
+b
 "
-section
-and
-unchecking
+Disabling
+the
+Safe
+Browsing
+feature
+is
+not
+recommended
+as
+it
+may
+result
+in
+you
+going
+to
+unsafe
+sites
+.
+If
+you
+wish
+to
+disable
+the
+feature
+completely
+follow
+these
+steps
+:
+"
+>
+<
+!
+ENTITY
+rights
+.
+safebrowsing
+-
+term1
+"
+Open
+the
+application
+preferences
+"
+>
+<
+!
+ENTITY
+rights
+.
+safebrowsing
+-
+term2
+"
+Select
+the
+Security
+selection
+"
+>
+<
+!
+ENTITY
+rights
+.
+safebrowsing
+-
+term3
+"
+Uncheck
 the
 options
-for
+to
 &
 quot
 ;
@@ -845,6 +1108,172 @@ label
 &
 quot
 ;
+"
+>
+<
+!
+ENTITY
+rights
+.
+safebrowsing
+-
+term4
+"
+Safe
+Browsing
+is
+now
+disabled
+"
+>
+<
+!
+-
+-
+location
+aware
+browsing
+points
+for
+branded
+builds
+-
+-
+>
+<
+!
+ENTITY
+rights
+.
+locationawarebrowsing
+-
+a
+"
+Location
+Aware
+Browsing
+:
+"
+>
+<
+!
+ENTITY
+rights
+.
+locationawarebrowsing
+-
+b
+"
+is
+always
+opt
+-
+in
+.
+No
+location
+information
+is
+ever
+sent
+without
+your
+permission
+.
+If
+you
+wish
+to
+disable
+the
+feature
+completely
+follow
+these
+steps
+:
+"
+>
+<
+!
+ENTITY
+rights
+.
+locationawarebrowsing
+-
+term1a
+"
+In
+the
+URL
+bar
+type
+"
+>
+<
+!
+ENTITY
+rights
+.
+locationawarebrowsing
+-
+term1b
+"
+about
+:
+config
+"
+>
+<
+!
+ENTITY
+rights
+.
+locationawarebrowsing
+-
+term2
+"
+Type
+geo
+.
+enabled
+"
+>
+<
+!
+ENTITY
+rights
+.
+locationawarebrowsing
+-
+term3
+"
+Double
+click
+on
+the
+geo
+.
+enabled
+preference
+"
+>
+<
+!
+ENTITY
+rights
+.
+locationawarebrowsing
+-
+term4
+"
+Location
+-
+Aware
+Browsing
+is
+now
+disabled
 "
 >
 <
@@ -951,7 +1380,7 @@ builds
 <
 !
 ENTITY
-rights
+rights2
 .
 webservices
 -
@@ -978,13 +1407,10 @@ up
 to
 -
 date
-phishing
-and
-malware
-information
+Services
 .
 However
-they
+we
 cannot
 guarantee
 that
@@ -996,23 +1422,56 @@ and
 error
 -
 free
-:
+.
+For
+example
+the
+Safe
+Browsing
+Service
+may
+not
+identify
 some
 risky
 sites
-may
-not
-be
-identified
 and
+may
+identify
 some
 safe
 sites
-may
-be
-identified
 in
 error
+and
+the
+Location
+Aware
+Service
+all
+locations
+returned
+by
+our
+service
+providers
+are
+estimates
+only
+and
+neither
+we
+nor
+our
+service
+providers
+guarantee
+the
+accuracy
+of
+the
+locations
+provided
 .
 "
 >
@@ -1043,7 +1502,7 @@ discretion
 <
 !
 ENTITY
-rights
+rights2
 .
 webservices
 -
@@ -1065,12 +1524,13 @@ of
 brandShortName
 ;
 and
+&
+vendorShortName
+;
+grants
 you
-have
-all
-the
+its
 rights
-necessary
 to
 do
 so
