Bug 591118 - Generate Sync Key (part 2) [r=mconnor]
Change the setup wizard to generate the Sync Key

UltraBlame original commit: ad3b17926d46e8c2647dbe60a26b41518a36159c

--- a/services/sync/locales/en-US/errors.properties
+++ b/services/sync/locales/en-US/errors.properties
@@ -54,6 +54,26 @@ login
 .
 reason
 .
+no_synckey
+=
+No
+saved
+Sync
+Key
+to
+use
+#
+the
+following
+one
+is
+deprecated
+error
+.
+login
+.
+reason
+.
 no_passphrase
 =
 No
@@ -131,6 +151,76 @@ Unknown
 error
 change
 .
+synckey
+.
+sameAsSyncKey
+=
+The
+new
+Sync
+Key
+cannot
+be
+the
+same
+as
+your
+Sync
+Key
+change
+.
+synckey
+.
+sameAsPassword
+=
+The
+Sync
+Key
+cannot
+be
+the
+same
+as
+your
+password
+change
+.
+synckey
+.
+sameAsUsername
+=
+The
+Sync
+Key
+cannot
+be
+the
+same
+as
+your
+user
+name
+change
+.
+synckey
+.
+tooShort
+=
+The
+Sync
+Key
+entered
+is
+too
+short
+#
+these
+are
+all
+deprecated
+:
+change
+.
 passphrase
 .
 ppSameAsPassphrase
@@ -205,6 +295,26 @@ entered
 is
 too
 short
+change
+.
+password
+.
+pwSameAsSyncKey
+=
+Password
+can
+'
+t
+match
+your
+Sync
+Key
+#
+the
+following
+one
+is
+deprecated
 change
 .
 password
