Bug 590805 - Sync UI: Revamp setup wizard (part 1), r=mconnor a=blocking2.0
Generate Sync Key: Implement key generation and backup (email/print/save)

UltraBlame original commit: e06b3042151c3f7122df50d7f2a697e2e99daab0

--- a/browser/locales/en-US/chrome/browser/syncSetup.properties
+++ b/browser/locales/en-US/chrome/browser/syncSetup.properties
@@ -98,6 +98,58 @@ label
 %
 S
 passwords
+email
+.
+synckey
+.
+subject
+=
+Your
+Firefox
+Sync
+Key
+email
+.
+synckey
+.
+body
+=
+Congratulations
+for
+signing
+up
+for
+Firefox
+Sync
+!
+Your
+secret
+Firefox
+Sync
+key
+is
+%
+S
+.
+Do
+not
+lose
+it
+or
+share
+with
+other
+people
+.
+save
+.
+synckey
+.
+title
+=
+Save
+Sync
+Key
 #
 Several
 other
