--- a/browser/locales/en-US/chrome/browser/syncSetup.dtd
+++ b/browser/locales/en-US/chrome/browser/syncSetup.dtd
@@ -641,6 +641,65 @@ c
 <
 !
 ENTITY
+page
+.
+syncKeyBackup
+.
+title
+"
+Your
+Firefox
+Sync
+Key
+"
+>
+<
+!
+ENTITY
+page
+.
+syncKeyBackup
+.
+descr
+"
+This
+secret
+key
+is
+used
+to
+encrypt
+your
+personal
+data
+.
+It
+is
+not
+uploaded
+to
+the
+server
+and
+cannot
+be
+recovered
+.
+Do
+not
+lose
+it
+or
+share
+with
+other
+people
+.
+"
+>
+<
+!
+ENTITY
 syncModeSwitchDesc
 .
 label
