Bug 590805 - Sync UI: Revamp setup wizard (part 3), r=mconnor a=blocking2.0
Generate Sync Key: Fix up the Change/Update Passphrase dialog in the preference pane.

UltraBlame original commit: 134be5ec050ca08cab9b3ab3a94cdf3c9cc2e837

--- a/browser/locales/en-US/chrome/browser/syncGenericChange.properties
+++ b/browser/locales/en-US/chrome/browser/syncGenericChange.properties
@@ -148,32 +148,32 @@ password
 .
 change
 .
-passphrase
+synckey
 .
 title
 =
 Change
 your
-Secret
-Phrase
+Sync
+Key
 change
 .
-passphrase
+synckey
 .
 acceptButton
 =
 Change
-Secret
-Phrase
+Sync
+Key
 change
 .
-passphrase
+synckey
 .
 label
 =
 Changing
-secret
-phrase
+Sync
+Key
 and
 uploading
 local
@@ -182,7 +182,7 @@ please
 wait
 change
 .
-passphrase
+synckey
 .
 error
 =
@@ -198,7 +198,7 @@ phrase
 !
 change
 .
-passphrase
+synckey
 .
 success
 =
@@ -209,119 +209,48 @@ was
 successfully
 changed
 !
-#
-LOCALIZATION
-NOTE
-(
 change
 .
-passphrase
-.
-introText
-)
-"
-Sync
-"
-should
-match
-&
-syncBrand
-.
-shortName
-.
-label
-;
-from
-syncBrand
-.
-dtd
-change
-.
-passphrase
+synckey
 .
 introText
 =
+Firefox
+Cares
+About
 Your
-secret
-phrase
-must
-be
-at
-least
-12
-characters
-long
+Privacy
+change
 .
-Sync
-uses
-this
-phrase
-as
-part
+synckey
+.
+introText2
+=
+To
+ensure
+your
+total
+privacy
+all
 of
-encrypting
 your
 data
-.
-#
-LOCALIZATION
-NOTE
-(
-change
-.
-passphrase
-.
-introText2
-)
-"
-Firefox
-Sync
-"
-should
-match
-syncBrand
-.
-fullName
-.
-label
-from
-syncBrand
-.
-dtd
-change
-.
-passphrase
-.
-introText2
-=
-You
-may
-wish
-to
-write
-this
-down
-as
-this
 is
-never
-sent
-over
-the
-Internet
-and
+encrypted
+prior
+to
+being
+uploaded
+.
+The
+key
+to
+decrypt
+your
+data
 is
 not
-backed
-up
-or
-synced
-by
-Firefox
-Sync
-for
-your
-security
+uploaded
 .
 #
 LOCALIZATION
@@ -329,7 +258,7 @@ NOTE
 (
 change
 .
-passphrase
+synckey
 .
 warningText
 )
@@ -351,13 +280,14 @@ syncBrand
 dtd
 change
 .
-passphrase
+synckey
 .
 warningText
 =
 Note
 :
-This
+Changing
+this
 will
 erase
 all
@@ -384,14 +314,24 @@ not
 sync
 until
 the
-secret
-phrase
+new
+Sync
+Key
 is
 entered
 for
 that
 device
 .
+new
+.
+synckey
+.
+label
+=
+Your
+Sync
+Key
 #
 LOCALIZATION
 NOTE
@@ -505,67 +445,49 @@ again
 .
 new
 .
-passphrase
+synckey
 .
 title
 =
 Update
-Secret
-Phrase
+Sync
+Key
 new
 .
-passphrase
+synckey
 .
 introText
 =
 Your
-secret
-phrase
+Sync
+Key
 has
 changed
 please
 enter
 your
 new
-secret
-phrase
+Sync
+Key
 new
 .
-passphrase
-.
-label
-=
-New
-secret
-phrase
-new
-.
-passphrase
-.
-confirm
-=
-Confirm
-secret
-phrase
-new
-.
-passphrase
+synckey
 .
 acceptButton
 =
 Update
-Secret
-Phrase
+Sync
+Key
 new
 .
-passphrase
+synckey
 .
 status
 .
 incorrect
 =
-Secret
-phrase
+Sync
+Key
 incorrect
 please
 try
