Bug 590805 - Sync UI: Revamp setup wizard (part 2), r=mconnor a=blocking2.0
Generate Sync Key: Change the setup wizard to generate the Sync Key

UltraBlame original commit: 201cc86810962292e4290630cb0fea9b60bbc18c

--- a/browser/locales/en-US/chrome/browser/syncSetup.dtd
+++ b/browser/locales/en-US/chrome/browser/syncSetup.dtd
@@ -453,8 +453,8 @@ Account
 Page
 2
 :
-Passphrase
-Entry
+Sync
+Key
 -
 -
 >
@@ -463,126 +463,220 @@ Entry
 ENTITY
 setup
 .
-newPPPage
+newSyncKeyPage
 .
 title
 .
 label
 "
-Enter
-your
-Secret
-Phrase
+&
+brandShortName
+;
+Cares
+About
+Your
+Privacy
 "
 >
 <
 !
 ENTITY
-passphraseDesc
+setup
+.
+newSyncKeyPage
+.
+description
 .
 label
 "
-Please
-enter
-a
-secret
-phrase
-.
-This
-will
-be
-used
-to
-encrypt
+To
+ensure
+your
+total
+privacy
 all
+of
 your
 data
-so
-only
-you
-can
-access
-it
-.
-It
 is
-never
-stored
-on
-the
-server
-so
-don
-'
-t
-lose
-this
-!
-"
->
-<
-!
-ENTITY
-passphraseDesc2
+encrypted
+prior
+to
+being
+uploaded
 .
-label
-"
-This
-must
-be
-at
-least
-12
-characters
-long
-and
-cannot
-match
+The
+Sync
+Key
+which
+is
+necessary
+to
+decrypt
 your
-account
-password
+data
+is
+not
+uploaded
 .
 "
 >
 <
 !
 ENTITY
-passphraseEntry
+syncKeyEntry
 .
 label
 "
-Secret
-Phrase
+Your
+Sync
+Key
 "
 >
 <
 !
 ENTITY
-passphraseEntry
+syncKeyEntry
+.
+accesskey
+"
+K
+"
+>
+<
+!
+ENTITY
+syncKeyGenerate
+.
+label
+"
+Generate
+"
+>
+<
+!
+ENTITY
+syncKeyBackup
+.
+description
+"
+Your
+Sync
+Key
+is
+required
+to
+access
+&
+syncBrand
+.
+fullName
+.
+label
+;
+on
+other
+machines
+.
+Please
+create
+a
+backup
+copy
+.
+We
+cannot
+help
+you
+recover
+your
+Sync
+Key
+.
+"
+>
+<
+!
+ENTITY
+button
+.
+syncKeyBackup
+.
+email
+.
+label
+"
+Email
+"
+>
+<
+!
+ENTITY
+button
+.
+syncKeyBackup
+.
+email
+.
+accesskey
+"
+E
+"
+>
+<
+!
+ENTITY
+button
+.
+syncKeyBackup
+.
+print
+.
+label
+"
+Print
+"
+>
+<
+!
+ENTITY
+button
+.
+syncKeyBackup
+.
+print
+.
+accesskey
+"
+P
+"
+>
+<
+!
+ENTITY
+button
+.
+syncKeyBackup
+.
+save
+.
+label
+"
+Save
+"
+>
+<
+!
+ENTITY
+button
+.
+syncKeyBackup
+.
+save
 .
 accesskey
 "
 S
-"
->
-<
-!
-ENTITY
-passphraseConfirm
-.
-label
-"
-Confirm
-"
->
-<
-!
-ENTITY
-passphraseConfirm
-.
-accesskey
-"
-m
 "
 >
 <
@@ -985,81 +1079,87 @@ Account
 Page
 2
 :
-Passphrase
+Sync
+Key
 -
 -
 >
 <
 !
 ENTITY
-passphraseGroupbox
+setup
 .
-label
-"
-Enter
-Secret
-Phrase
-"
->
-<
-!
-ENTITY
-passphraseDesc3
+existingSyncKeyPage
 .
-label
+title
 "
 Please
-enter
-your
-secret
-phrase
-.
-This
-must
-be
-the
-same
-secret
-phrase
-that
-you
-used
-to
-encrypt
-your
-data
-.
+Enter
+Your
+Sync
+Key
 "
 >
 <
 !
 ENTITY
-passphraseHelp
+setup
+.
+existingSyncKeyPage
+.
+description
+"
+The
+Sync
+Key
+was
+generated
+for
+you
+or
+you
+entered
+your
+own
+when
+you
+first
+signed
+up
+for
+&
+syncBrand
+.
+fullName
 .
 label
-"
-Your
-secret
-phrase
-is
-at
-least
-12
-characters
-long
-and
+;
+.
+It
 is
 not
+the
+same
+as
 your
 password
 .
+"
+>
+<
+!
+ENTITY
+existingSyncKeyHelp
+.
+description
+"
 You
 can
 find
 your
 saved
-secret
-phrase
+Sync
+Key
 by
 going
 to
@@ -1081,8 +1181,8 @@ cannot
 get
 the
 correct
-secret
-phrase
+Sync
+Key
 you
 can
 choose
@@ -1105,13 +1205,16 @@ server
 <
 !
 ENTITY
-changePassphrase
+lostSyncKey
 .
 label
 "
-Change
-Secret
-Phrase
+I
+have
+lost
+my
+Sync
+Key
 "
 >
 <
