Bug 590805 - Sync UI: Revamp setup wizard (part 5), r=mconnor a=blocking2.0
Restyle the setup wizard.

UltraBlame original commit: 728a4c3f0a5380817a716be93351caebe0fcfc71

--- a/browser/locales/en-US/chrome/browser/syncSetup.dtd
+++ b/browser/locales/en-US/chrome/browser/syncSetup.dtd
@@ -32,6 +32,78 @@ wizard
 ENTITY
 setup
 .
+pickSetupType
+.
+description
+"
+Welcome
+if
+you
+'
+ve
+never
+used
+&
+syncBrand
+.
+fullName
+.
+label
+;
+before
+you
+will
+need
+to
+create
+a
+new
+account
+.
+"
+>
+<
+!
+ENTITY
+button
+.
+createNewAccount
+.
+label
+"
+Create
+a
+New
+Account
+"
+>
+<
+!
+ENTITY
+button
+.
+haveAccount
+.
+label
+"
+I
+Have
+a
+&
+syncBrand
+.
+fullName
+.
+label
+;
+Account
+"
+>
+<
+!
+ENTITY
+setup
+.
 choicePage
 .
 title
