Bug 590805 - Sync UI: Revamp setup wizard (part 4), r=mconnor a=blocking2.0
Change flow of setup wizard

UltraBlame original commit: 9ec78f93036c047fb35a683c58c74e59f8276d8f

--- a/browser/locales/en-US/chrome/browser/preferences/sync.dtd
+++ b/browser/locales/en-US/chrome/browser/preferences/sync.dtd
@@ -271,88 +271,30 @@ c
 <
 !
 ENTITY
-syncModeSwitchDesc
-.
-label
-"
-&
-brandShortName
-;
-will
-:
-"
->
-<
-!
-ENTITY
-syncModeSwitchDesc
-.
-accesskey
-"
-w
-"
->
-<
-!
-ENTITY
-syncEverything
+syncMy
 .
 label
 "
 Sync
-Everything
+My
 "
 >
 <
 !
 ENTITY
-customSync
-.
-label
-"
-Use
-my
-custom
-settings
-"
->
-<
-!
-ENTITY
-syncEverythingDescription
-.
-label
-"
-Your
-bookmarks
-history
-passwords
-preferences
-and
-tabs
-will
-be
-synced
-.
-"
->
-<
-!
-ENTITY
-syncItem
+engine
 .
 bookmarks
 .
 label
 "
-Sync
 Bookmarks
 "
 >
 <
 !
 ENTITY
-syncItem
+engine
 .
 bookmarks
 .
@@ -364,20 +306,19 @@ m
 <
 !
 ENTITY
-syncItem
+engine
 .
 tabs
 .
 label
 "
-Sync
 Tabs
 "
 >
 <
 !
 ENTITY
-syncItem
+engine
 .
 tabs
 .
@@ -389,20 +330,19 @@ T
 <
 !
 ENTITY
-syncItem
+engine
 .
 history
 .
 label
 "
-Sync
 History
 "
 >
 <
 !
 ENTITY
-syncItem
+engine
 .
 history
 .
@@ -414,20 +354,19 @@ r
 <
 !
 ENTITY
-syncItem
+engine
 .
 passwords
 .
 label
 "
-Sync
 Passwords
 "
 >
 <
 !
 ENTITY
-syncItem
+engine
 .
 passwords
 .
@@ -439,20 +378,19 @@ P
 <
 !
 ENTITY
-syncItem
+engine
 .
 prefs
 .
 label
 "
-Sync
 Preferences
 "
 >
 <
 !
 ENTITY
-syncItem
+engine
 .
 prefs
 .
