--- a/browser/locales/en-US/chrome/browser/syncSetup.dtd
+++ b/browser/locales/en-US/chrome/browser/syncSetup.dtd
@@ -121,12 +121,11 @@ Account
 <
 !
 ENTITY
-connectTo
+server
 .
 label
 "
-Connect
-to
+Server
 "
 >
 <
@@ -257,22 +256,14 @@ Info
 ENTITY
 setup
 .
-newAccountPage
+newAccountDetailsPage
 .
 title
 .
 label
 "
-Create
-your
-&
-syncBrand
-.
-shortName
-.
-label
-;
 Account
+Details
 "
 >
 <
@@ -681,59 +672,6 @@ S
 >
 <
 !
--
--
-New
-Account
-Page
-3
-:
-Sync
-Type
-Options
--
--
->
-<
-!
-ENTITY
-setup
-.
-newAccountPrefs2
-.
-title
-.
-label
-"
-Browser
-Sync
-Preferences
-"
->
-<
-!
-ENTITY
-syncComputerName
-.
-label
-"
-Computer
-Name
-:
-"
->
-<
-!
-ENTITY
-syncComputerName
-.
-accesskey
-"
-c
-"
->
-<
-!
 ENTITY
 page
 .
@@ -793,205 +731,12 @@ people
 >
 <
 !
-ENTITY
-syncModeSwitchDesc
-.
-label
-"
-&
-brandShortName
-;
-will
-:
-"
->
-<
-!
-ENTITY
-syncModeSwitchDesc
-.
-accesskey
-"
-w
-"
->
-<
-!
-ENTITY
-syncEverything
-.
-label
-"
-Sync
-Everything
-"
->
-<
-!
-ENTITY
-customSync
-.
-label
-"
-Use
-my
-custom
-settings
-"
->
-<
-!
-ENTITY
-syncEverythingDescription
-.
-label
-"
-Your
-bookmarks
-history
-passwords
-preferences
-and
-tabs
-will
-be
-synced
-.
-"
->
-<
-!
-ENTITY
-syncItem
-.
-bookmarks
-.
-label
-"
-Sync
-Bookmarks
-"
->
-<
-!
-ENTITY
-syncItem
-.
-bookmarks
-.
-accesskey
-"
-m
-"
->
-<
-!
-ENTITY
-syncItem
-.
-tabs
-.
-label
-"
-Sync
-Tabs
-"
->
-<
-!
-ENTITY
-syncItem
-.
-tabs
-.
-accesskey
-"
-T
-"
->
-<
-!
-ENTITY
-syncItem
-.
-history
-.
-label
-"
-Sync
-History
-"
->
-<
-!
-ENTITY
-syncItem
-.
-history
-.
-accesskey
-"
-r
-"
->
-<
-!
-ENTITY
-syncItem
-.
-passwords
-.
-label
-"
-Sync
-Passwords
-"
->
-<
-!
-ENTITY
-syncItem
-.
-passwords
-.
-accesskey
-"
-P
-"
->
-<
-!
-ENTITY
-syncItem
-.
-prefs
-.
-label
-"
-Sync
-Preferences
-"
->
-<
-!
-ENTITY
-syncItem
-.
-prefs
-.
-accesskey
-"
-S
-"
->
-<
-!
 -
 -
 New
 Account
 Page
-4
+3
 :
 Captcha
 -
@@ -1002,22 +747,20 @@ Captcha
 ENTITY
 setup
 .
-captchaPage
+captchaPage2
 .
 title
 .
 label
 "
 Please
-confirm
-you
+Confirm
+You
 '
 re
-not
+Not
 a
-robot
-;
-)
+Robot
 "
 >
 <
@@ -1231,12 +974,7 @@ Verifying
 !
 -
 -
-New
-&
-Existing
-Account
-:
-Merge
+Sync
 Options
 -
 -
@@ -1246,26 +984,171 @@ Options
 ENTITY
 setup
 .
-mergeChoicePage
+optionsPage
 .
 title
-.
-label
 "
-How
-do
-you
-want
-to
-start
-off
-?
+Sync
+Options
 "
 >
 <
 !
 ENTITY
-choice
+syncComputerName
+.
+label
+"
+Computer
+Name
+:
+"
+>
+<
+!
+ENTITY
+syncComputerName
+.
+accesskey
+"
+c
+"
+>
+<
+!
+ENTITY
+syncMy
+.
+label
+"
+Sync
+My
+"
+>
+<
+!
+ENTITY
+engine
+.
+bookmarks
+.
+label
+"
+Bookmarks
+"
+>
+<
+!
+ENTITY
+engine
+.
+bookmarks
+.
+accesskey
+"
+m
+"
+>
+<
+!
+ENTITY
+engine
+.
+tabs
+.
+label
+"
+Tabs
+"
+>
+<
+!
+ENTITY
+engine
+.
+tabs
+.
+accesskey
+"
+T
+"
+>
+<
+!
+ENTITY
+engine
+.
+history
+.
+label
+"
+History
+"
+>
+<
+!
+ENTITY
+engine
+.
+history
+.
+accesskey
+"
+r
+"
+>
+<
+!
+ENTITY
+engine
+.
+passwords
+.
+label
+"
+Passwords
+"
+>
+<
+!
+ENTITY
+engine
+.
+passwords
+.
+accesskey
+"
+P
+"
+>
+<
+!
+ENTITY
+engine
+.
+prefs
+.
+label
+"
+Preferences
+"
+>
+<
+!
+ENTITY
+engine
+.
+prefs
+.
+accesskey
+"
+S
+"
+>
+<
+!
+ENTITY
+choice2
 .
 merge
 .
@@ -1280,7 +1163,7 @@ computer
 s
 data
 with
-your
+my
 &
 syncBrand
 .
@@ -1294,31 +1177,22 @@ data
 <
 !
 ENTITY
-choice
+choice2
 .
 merge
 .
-recommend
+recommended
 .
 label
 "
-This
-option
-is
-strongly
-recommended
-by
-Mozilla
-for
-all
-users
-.
+Recommended
+:
 "
 >
 <
 !
 ENTITY
-choice
+choice2
 .
 client
 .
@@ -1333,11 +1207,11 @@ on
 this
 computer
 with
-your
+my
 &
 syncBrand
 .
-fullName
+shortName
 .
 label
 ;
@@ -1347,7 +1221,7 @@ data
 <
 !
 ENTITY
-choice
+choice2
 .
 server
 .
@@ -1360,8 +1234,10 @@ all
 other
 devices
 with
-your
-local
+this
+computer
+'
+s
 data
 "
 >
@@ -1369,11 +1245,6 @@ data
 !
 -
 -
-New
-&
-Existing
-Account
-:
 Confirm
 Merge
 Options
@@ -1383,15 +1254,13 @@ Options
 <
 !
 ENTITY
-confirm
+setup
 .
-caption
+optionsConfirmPage
 .
-label
+title
 "
 Confirm
-your
-choice
 "
 >
 <
@@ -1403,24 +1272,6 @@ merge
 .
 label
 "
-You
-have
-chosen
-to
-merge
-your
-data
-on
-this
-computer
-with
-the
-data
-on
-your
-other
-devices
-running
 &
 syncBrand
 .
@@ -1428,6 +1279,20 @@ fullName
 .
 label
 ;
+will
+now
+merge
+all
+this
+computer
+'
+s
+browser
+data
+into
+your
+Sync
+account
 .
 "
 >
@@ -1592,60 +1457,40 @@ setup
 successPage
 .
 title
-.
-label
 "
 Setup
 Complete
-!
 "
 >
 <
 !
 ENTITY
-setup
-.
-successPage
-.
-desc
+changeOptions
 .
 label
 "
-Congratulations
-!
-&
-brandShortName
-;
-is
-now
-set
-up
-to
-automatically
-sync
-your
-information
-.
-Don
-'
-t
-forget
-to
-install
-&
-syncBrand
-.
-fullName
-.
-label
-;
-on
-all
-your
-devices
-.
 You
 can
+change
+this
+preference
+by
+selecting
+Sync
+Options
+below
+.
+"
+>
+<
+!
+ENTITY
+continueUsing
+.
+label
+"
+You
+may
 now
 continue
 using
