--- a/browser/locales/en-US/chrome/browser/syncSetup.properties
+++ b/browser/locales/en-US/chrome/browser/syncSetup.properties
@@ -1,16 +1,25 @@
-cancelSetup
+button
+.
+syncOptions
+.
+label
+=
+Sync
+Options
+button
+.
+syncOptionsDone
+.
+label
+=
+Done
+button
+.
+syncOptionsCancel
 .
 label
 =
 Cancel
-Setup
-errorCreatingAccount
-.
-title
-=
-Error
-Creating
-Account
 invalidEmail
 .
 label
@@ -35,6 +44,11 @@ label
 Already
 in
 use
+verifying
+.
+label
+=
+Verifying
 #
 LOCALIZATION
 NOTE
@@ -150,6 +164,140 @@ title
 Save
 Sync
 Key
+newAccount
+.
+action
+.
+label
+=
+Firefox
+Sync
+is
+now
+set
+up
+to
+automatically
+sync
+all
+of
+your
+browser
+data
+.
+newAccount
+.
+change
+.
+label
+=
+You
+can
+choose
+exactly
+what
+to
+sync
+by
+selecting
+Sync
+Options
+below
+.
+resetClient
+.
+change
+.
+label
+=
+Firefox
+Sync
+will
+now
+merge
+all
+this
+computer
+'
+s
+browser
+data
+into
+your
+Sync
+account
+.
+wipeClient
+.
+change
+.
+label
+=
+Firefox
+Sync
+will
+now
+replace
+all
+of
+the
+browser
+data
+on
+this
+computer
+with
+the
+data
+in
+your
+Sync
+account
+.
+wipeRemote
+.
+change
+.
+label
+=
+Firefox
+Sync
+will
+now
+replace
+all
+of
+the
+browser
+data
+in
+your
+Sync
+account
+with
+the
+data
+on
+this
+computer
+.
+existingAccount
+.
+change
+.
+label
+=
+You
+can
+change
+this
+preference
+by
+selecting
+Sync
+Options
+below
+.
 #
 Several
 other
