--- a/browser/locales/en-US/chrome/browser/preferences/advanced.dtd
+++ b/browser/locales/en-US/chrome/browser/preferences/advanced.dtd
@@ -492,6 +492,26 @@ C
 <
 !
 ENTITY
+smartSizeCache
+.
+label
+"
+Let
+&
+brandShortName
+;
+manage
+the
+size
+of
+my
+cache
+.
+"
+>
+<
+!
+ENTITY
 updateTab
 .
 label
