Bug 586388 - Provide Select All context menu in HUD Console r=dietrch a=dietrich
UltraBlame original commit: 786aa7928c28b71953114625be283b8c5fbe7976

--- a/toolkit/locales/en-US/chrome/global/headsUpDisplay.properties
+++ b/toolkit/locales/en-US/chrome/global/headsUpDisplay.properties
@@ -455,6 +455,17 @@ copyCmd
 accesskey
 =
 C
+selectAllCmd
+.
+label
+=
+Select
+All
+selectAllCmd
+.
+accesskey
+=
+A
 helperFuncUnsupportedTypeError
 =
 Can
