Bug 592879 - Detect and warn users that the current window.console API is third party r=dietrich a=dietrich
UltraBlame original commit: 6bed6915317a1f3c86ca4f60ff08f50682654273

--- a/toolkit/locales/en-US/chrome/global/headsUpDisplay.properties
+++ b/toolkit/locales/en-US/chrome/global/headsUpDisplay.properties
@@ -878,6 +878,37 @@ Sx
 Spx
 %
 Sms
+ConsoleAPIDisabled
+=
+The
+Web
+Console
+logging
+API
+(
+console
+.
+log
+console
+.
+info
+console
+.
+warn
+console
+.
+error
+)
+has
+been
+disabled
+by
+a
+script
+on
+this
+page
+.
 #
 LOCALIZATION
 NOTE
