Bug 583965: Update localisation notes to make it clearer how to localise the postfixes. r=pike, a=blocks-b6
UltraBlame original commit: bd1e6e73c594cf3507cda4194c1780d5716ab42d

--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
@@ -1761,6 +1761,56 @@ Unknown
 >
 <
 !
+-
+-
+LOCALIZATION
+NOTE
+(
+addon
+.
+disabled
+.
+postfix
+)
+:
+This
+is
+used
+in
+a
+normal
+list
+to
+signify
+that
+an
+add
+-
+on
+is
+disabled
+in
+the
+form
+"
+<
+Addon
+name
+>
+<
+1
+.
+0
+>
+(
+disabled
+)
+"
+-
+-
+>
+<
+!
 ENTITY
 addon
 .
@@ -1790,6 +1840,11 @@ postfix
 This
 is
 used
+in
+the
+available
+updates
+list
 to
 signify
 that
@@ -1802,12 +1857,28 @@ in
 the
 form
 "
+<
 Addon
-v1
+name
+>
+<
+1
 .
-0
+1
+>
 Update
 "
+.
+It
+is
+fine
+to
+use
+constructs
+like
+brackets
+if
+necessary
 -
 -
 >
