Bug 587970 - Provide ability "Update all now" within 'Available Updates' screen. r=dtownsend, a=blocking-beta6
UltraBlame original commit: 93785fd6f873face1b377fe78c2706f0f68e6060

--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
@@ -700,6 +700,36 @@ Updates
 >
 <
 !
+ENTITY
+updates
+.
+updateSelected
+.
+label
+"
+Install
+Updates
+"
+>
+<
+!
+ENTITY
+updates
+.
+updateSelected
+.
+tooltip
+"
+Install
+available
+updates
+in
+this
+list
+"
+>
+<
+!
 -
 -
 addon
@@ -2019,6 +2049,35 @@ this
 add
 -
 on
+"
+>
+<
+!
+ENTITY
+addon
+.
+includeUpdate
+.
+label
+"
+Include
+in
+Update
+"
+>
+<
+!
+ENTITY
+addon
+.
+updateAvailable
+.
+label
+"
+An
+update
+is
+available
 "
 >
 <
