--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -258,13 +258,88 @@ W
 >
 <
 !
+-
+-
+LOCALIZATION
+NOTE
+(
+pinAppTab
+.
+label
+unpinAppTab
+.
+label
+)
+:
+"
+Pin
+"
+is
+being
+used
+as
+a
+metaphor
+for
+expressing
+the
+fact
+that
+these
+tabs
+are
+"
+pinned
+"
+to
+the
+left
+edge
+of
+the
+tabstrip
+.
+Really
+we
+just
+want
+the
+string
+to
+express
+the
+idea
+that
+this
+is
+a
+lightweight
+and
+reversible
+action
+that
+keeps
+your
+tab
+where
+you
+can
+reach
+it
+easily
+.
+-
+-
+>
+<
+!
 ENTITY
-pinTab
+pinAppTab
 .
 label
 "
-Make
-into
+Pin
+as
 App
 Tab
 "
@@ -272,34 +347,32 @@ Tab
 <
 !
 ENTITY
-pinTab
+pinAppTab
 .
 accesskey
 "
-p
+P
 "
 >
 <
 !
 ENTITY
-unpinTab
+unpinAppTab
 .
 label
 "
-Make
-into
-Normal
+Unpin
 Tab
 "
 >
 <
 !
 ENTITY
-unpinTab
+unpinAppTab
 .
 accesskey
 "
-k
+b
 "
 >
 <
