--- a/toolkit/locales/en-US/chrome/global/headsUpDisplay.properties
+++ b/toolkit/locales/en-US/chrome/global/headsUpDisplay.properties
@@ -466,6 +466,54 @@ selectAllCmd
 accesskey
 =
 A
+#
+LOCALIZATION
+NOTE
+(
+timestampFormat
+)
+:
+%
+1
+02S
+=
+hours
+(
+24
+-
+hour
+clock
+)
+#
+%
+2
+02S
+=
+minutes
+%
+3
+02S
+=
+seconds
+%
+4
+03S
+=
+milliseconds
+.
+timestampFormat
+=
+%
+02S
+:
+%
+02S
+:
+%
+02S
+.
+%
+03S
 helperFuncUnsupportedTypeError
 =
 Can
