Bug 588482 - Restore Session on-demand at startup [r=dao, r=dietrich, a=blocking-b6+]
UltraBlame original commit: d8502fae9678f6a06194c1467aa2fd0c36ecf150

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -2635,6 +2635,18 @@ Windows
 <
 !
 ENTITY
+historyRestoreLastSession
+.
+label
+"
+Restore
+Previous
+Session
+"
+>
+<
+!
+ENTITY
 historyHomeCmd
 .
 label
