--- a/browser/locales/en-US/chrome/browser/pageInfo.dtd
+++ b/browser/locales/en-US/chrome/browser/pageInfo.dtd
@@ -941,6 +941,35 @@ Location
 <
 !
 ENTITY
+permIndexedDB
+"
+Maintain
+Offline
+Storage
+"
+>
+<
+!
+ENTITY
+permClearStorage
+"
+Clear
+Storage
+"
+>
+<
+!
+ENTITY
+permClearStorage
+.
+accesskey
+"
+C
+"
+>
+<
+!
+ENTITY
 securityTab
 "
 Security
