--- a/toolkit/locales/en-US/chrome/global/headsUpDisplay.properties
+++ b/toolkit/locales/en-US/chrome/global/headsUpDisplay.properties
@@ -926,3 +926,34 @@ Sx
 Spx
 %
 Sms
+ConsoleAPIDisabled
+=
+The
+Web
+Console
+logging
+API
+(
+console
+.
+log
+console
+.
+info
+console
+.
+warn
+console
+.
+error
+)
+has
+been
+disabled
+by
+a
+script
+on
+this
+page
+.
