Bug 570957 - Use PluralForm for Sync Strings (additionalClients.label and friends), r=mconnor, a=blocking2.0 beta6+
UltraBlame original commit: 7e651ffb7a6310eb9a598aea94a4718788aae6a1

--- a/browser/locales/en-US/chrome/browser/syncSetup.properties
+++ b/browser/locales/en-US/chrome/browser/syncSetup.properties
@@ -53,34 +53,39 @@ Verifying
 LOCALIZATION
 NOTE
 (
-additionalClients
-.
-label
-bookmarkCount
-.
-label
-historyCount
-.
-label
-passwordCount
+additionalClientCount
 .
 label
 )
-.
+:
 #
-We
-'
-ll
-fix
-the
-lack
+Semi
+-
+colon
+list
 of
-PluralForms
-in
-bug
-583661
+plural
+forms
 .
-additionalClients
+See
+:
+#
+http
+:
+/
+/
+developer
+.
+mozilla
+.
+org
+/
+en
+/
+docs
+/
+Localization_and_Plurals
+additionalClientCount
 .
 label
 =
@@ -88,27 +93,155 @@ and
 %
 S
 additional
+device
+;
+and
+%
+S
+additional
 devices
-bookmarkCount
+#
+LOCALIZATION
+NOTE
+(
+bookmarksCount
+.
+label
+)
+:
+#
+Semi
+-
+colon
+list
+of
+plural
+forms
+.
+See
+:
+#
+http
+:
+/
+/
+developer
+.
+mozilla
+.
+org
+/
+en
+/
+docs
+/
+Localization_and_Plurals
+bookmarksCount
 .
 label
 =
 %
 S
+bookmark
+;
+%
+S
 bookmarks
-historyCount
+#
+LOCALIZATION
+NOTE
+(
+historyDaysCount
+.
+label
+)
+:
+#
+Semi
+-
+colon
+list
+of
+plural
+forms
+.
+See
+:
+#
+http
+:
+/
+/
+developer
+.
+mozilla
+.
+org
+/
+en
+/
+docs
+/
+Localization_and_Plurals
+historyDaysCount
 .
 label
 =
+%
+S
+day
+of
+history
+;
 %
 S
 days
 of
 history
-passwordCount
+#
+LOCALIZATION
+NOTE
+(
+passwordsCount
+.
+label
+)
+:
+#
+Semi
+-
+colon
+list
+of
+plural
+forms
+.
+See
+:
+#
+http
+:
+/
+/
+developer
+.
+mozilla
+.
+org
+/
+en
+/
+docs
+/
+Localization_and_Plurals
+passwordsCount
 .
 label
 =
+%
+S
+password
+;
 %
 S
 passwords
@@ -321,5 +454,3 @@ from
 services
 /
 sync
-*
-/
