--- a/browser/locales/en-US/chrome/browser/aboutHome.dtd
+++ b/browser/locales/en-US/chrome/browser/aboutHome.dtd
@@ -59,6 +59,8 @@ Page
 LOCALIZATION
 NOTE
 (
+abouthome
+.
 brandStart
 )
 :
@@ -140,5 +142,157 @@ aboutMozilla
 "
 About
 Mozilla
+"
+>
+<
+!
+-
+-
+LOCALIZATION
+NOTE
+(
+abouthome
+.
+defaultSnippet1
+.
+v1
+)
+:
+text
+in
+<
+a
+/
+>
+will
+be
+linked
+to
+the
+Firefox
+features
+page
+on
+mozilla
+.
+com
+-
+-
+>
+<
+!
+ENTITY
+abouthome
+.
+defaultSnippet1
+.
+v1
+"
+Thanks
+for
+choosing
+Firefox
+!
+To
+get
+the
+most
+out
+of
+your
+browser
+learn
+more
+about
+the
+<
+a
+>
+latest
+features
+<
+/
+a
+>
+.
+"
+>
+<
+!
+-
+-
+LOCALIZATION
+NOTE
+(
+abouthome
+.
+defaultSnippet2
+.
+v1
+)
+:
+text
+in
+<
+a
+/
+>
+will
+be
+linked
+to
+the
+featured
+add
+-
+ons
+on
+addons
+.
+mozilla
+.
+org
+-
+-
+>
+<
+!
+ENTITY
+abouthome
+.
+defaultSnippet2
+.
+v1
+"
+It
+'
+s
+easy
+to
+customize
+your
+Firefox
+exactly
+the
+way
+you
+want
+it
+.
+<
+a
+>
+Choose
+from
+thousands
+of
+add
+-
+ons
+<
+/
+a
+>
+.
 "
 >
