Bug 432287 - add buttons and icons for zoom in/out to toolbar customization palette. r=mano ui-r=faaborg
UltraBlame original commit: bf347202194887c0b5e7f3dac7996a5e6e6cf56a

--- a/browser/locales/en-US/chrome/browser/browser.dtd
+++ b/browser/locales/en-US/chrome/browser/browser.dtd
@@ -4467,6 +4467,39 @@ screen
 <
 !
 ENTITY
+zoomOutButton
+.
+tooltip
+"
+Zoom
+out
+"
+>
+<
+!
+ENTITY
+zoomInButton
+.
+tooltip
+"
+Zoom
+in
+"
+>
+<
+!
+ENTITY
+zoomControls
+.
+label
+"
+Zoom
+Controls
+"
+>
+<
+!
+ENTITY
 quitApplicationCmdWin
 .
 label
