--- a/browser/locales/en-US/chrome/browser/aboutPrivateBrowsing.dtd
+++ b/browser/locales/en-US/chrome/browser/aboutPrivateBrowsing.dtd
@@ -230,10 +230,62 @@ P
 >
 <
 !
+-
+-
+LOCALIZATION
+NOTE
+(
+privatebrowsingpage
+.
+howToStop2
+)
+:
+please
+leave
+&
+basePBMenu
+.
+label
+;
+intact
+in
+the
+translation
+-
+-
+>
+<
+!
+-
+-
+LOCALIZATION
+NOTE
+(
+privatebrowsingpage
+.
+howToStart2
+)
+:
+please
+leave
+&
+basePBMenu
+.
+label
+;
+intact
+in
+the
+translation
+-
+-
+>
+<
+!
 ENTITY
 privatebrowsingpage
 .
-howToStop
+howToStop2
 "
 To
 stop
@@ -241,7 +293,7 @@ Private
 Browsing
 select
 &
-toolsMenu
+basePBMenu
 .
 label
 ;
@@ -268,7 +320,7 @@ brandShortName
 ENTITY
 privatebrowsingpage
 .
-howToStart
+howToStart2
 "
 To
 start
@@ -279,7 +331,7 @@ can
 also
 select
 &
-toolsMenu
+basePBMenu
 .
 label
 ;
