--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
@@ -605,6 +605,96 @@ C
 ENTITY
 updates
 .
+updateAddonsAutomatically
+.
+label
+"
+Update
+Add
+-
+ons
+Automatically
+"
+>
+<
+!
+ENTITY
+updates
+.
+updateAddonsAutomatically
+.
+accesskey
+"
+A
+"
+>
+<
+!
+ENTITY
+updates
+.
+resetUpdatesToAutomatic
+.
+label
+"
+Reset
+All
+Add
+-
+ons
+to
+Update
+Automatically
+"
+>
+<
+!
+ENTITY
+updates
+.
+resetUpdatesToAutomatic
+.
+accesskey
+"
+R
+"
+>
+<
+!
+ENTITY
+updates
+.
+resetUpdatesToManual
+.
+label
+"
+Reset
+All
+Add
+-
+ons
+to
+Update
+Manually
+"
+>
+<
+!
+ENTITY
+updates
+.
+resetUpdatesToManual
+.
+accesskey
+"
+R
+"
+>
+<
+!
+ENTITY
+updates
+.
 updating
 .
 label
@@ -1288,6 +1378,39 @@ updateType
 "
 Automatic
 Updates
+"
+>
+<
+!
+ENTITY
+detail
+.
+updateDefault
+.
+label
+"
+Default
+"
+>
+<
+!
+ENTITY
+detail
+.
+updateDefault
+.
+tooltip
+"
+Automatically
+install
+updates
+only
+if
+that
+'
+s
+the
+default
 "
 >
 <
