strings for Bug 595455 - After several background update check failures notify the user that they should check if there is a new version available. r=dtownsend, ui-r=beltzner, a=blocking2.0-beta6
UltraBlame original commit: d074ed8f120db2cb6d064f681042cefd0e6aa0a3

--- a/toolkit/locales/en-US/chrome/mozapps/update/updates.dtd
+++ b/toolkit/locales/en-US/chrome/mozapps/update/updates.dtd
@@ -667,7 +667,45 @@ Update
 <
 !
 ENTITY
-errorCertAttrNoUpdate
+genericBackgroundError
+.
+label
+"
+&
+brandShortName
+;
+is
+unable
+to
+determine
+if
+there
+is
+an
+update
+available
+.
+Please
+make
+sure
+that
+you
+have
+the
+latest
+version
+of
+&
+brandShortName
+;
+from
+:
+"
+>
+<
+!
+ENTITY
+errorCertAttrNoUpdate2
 .
 label
 "
@@ -682,7 +720,9 @@ updating
 securely
 .
 Please
-check
+make
+sure
+that
 you
 have
 the
@@ -692,7 +732,7 @@ of
 &
 brandShortName
 ;
-at
+from
 :
 "
 >
