--- a/toolkit/locales/en-US/chrome/passwordmgr/passwordmgr.properties
+++ b/toolkit/locales/en-US/chrome/passwordmgr/passwordmgr.properties
@@ -423,27 +423,30 @@ savePasswordTitle
 =
 Confirm
 #
+LOCALIZATION
+NOTE
+(
+rememberPasswordText
+)
+:
+#
 1st
 string
-is
-product
-name
-2nd
 is
 the
 username
 for
 the
 login
-3rd
+2nd
 is
 the
-#
 login
 '
 s
 hostname
 .
+#
 Note
 that
 long
@@ -452,57 +455,43 @@ may
 be
 truncated
 .
-saveLoginText
+rememberPasswordText
 =
-Do
-you
-want
-%
-1
-S
-to
-remember
-the
+Remember
 password
 for
 "
 %
-2
+1
 S
 "
 on
 %
-3
+2
 S
 ?
 #
-1st
-string
-is
-product
-name
-2nd
+LOCALIZATION
+NOTE
+(
+rememberPasswordTextNoUsername
+)
+:
+#
+String
 is
 the
 login
 '
 s
 hostname
-saveLoginTextNoUsername
+.
+rememberPasswordTextNoUsername
 =
-Do
-you
-want
-%
-1
-S
-to
-remember
-this
+Remember
 password
 on
 %
-2
 S
 ?
 notNowButtonText
@@ -525,23 +514,26 @@ ver
 for
 This
 Site
-notifyBarNeverForSiteButtonText
+notifyBarNeverRememberButtonText
 =
 Never
+Remember
+Password
 for
 This
 Site
-notifyBarNeverForSiteButtonAccessKey
+notifyBarNeverRememberButtonAccessKey
 =
 e
 rememberButtonText
 =
 &
 Remember
-notifyBarRememberButtonText
+notifyBarRememberPasswordButtonText
 =
 Remember
-notifyBarRememberButtonAccessKey
+Password
+notifyBarRememberPasswordButtonAccessKey
 =
 R
 passwordChangeTitle
@@ -549,40 +541,46 @@ passwordChangeTitle
 Confirm
 Password
 Change
-passwordChangeText
-=
-Would
-you
-like
-to
-change
+#
+LOCALIZATION
+NOTE
+(
+updatePasswordText
+)
+:
+#
+String
+is
 the
-stored
+username
+for
+the
+login
+.
+updatePasswordText
+=
+Update
+saved
 password
 for
+"
 %
 S
+"
 ?
-passwordChangeTextNoUser
+updatePasswordTextNoUser
 =
-Would
-you
-like
-to
-change
-the
-stored
+Update
+saved
 password
-for
-this
-login
 ?
-notifyBarChangeButtonText
+notifyBarUpdateButtonText
 =
-Change
-notifyBarChangeButtonAccessKey
+Update
+Password
+notifyBarUpdateButtonAccessKey
 =
-C
+U
 notifyBarDontChangeButtonText
 =
 Don
