Bug 579547 - New About window for Firefox 4 r=gavin ui-r=belzner a=blocking
UltraBlame original commit: a1d900b2c5a48eb41bea7e741ce2379528a3b96f

--- a/browser/locales/en-US/chrome/browser/aboutDialog.dtd
+++ b/browser/locales/en-US/chrome/browser/aboutDialog.dtd
@@ -14,97 +14,222 @@ brandFullName
 <
 !
 ENTITY
-copyright
-"
-Credits
-"
->
-<
-!
-ENTITY
-copyright
+community
 .
-accesskey
-"
-C
-"
->
-<
-!
-ENTITY
-copyrightGNOME
-.
-accesskey
-"
-r
-"
->
-<
-!
-ENTITY
-aboutLink
+start
 "
 &
-lt
+brandShortName
 ;
-About
+is
+designed
+by
+"
+>
+<
+!
+ENTITY
+community
+.
+mozillaLink
+"
 &
-brandFullName
+vendorShortName
 ;
 "
 >
 <
 !
 ENTITY
-aboutLink
+community
 .
-accesskey
+end
 "
-A
-"
->
-<
-!
-ENTITY
-aboutVersion
-"
-version
-"
->
-<
-!
-ENTITY
-closeCmdGNOME
+a
+global
+community
+working
+together
+to
+make
+the
+Internet
+better
 .
-label
-"
-Close
-"
->
-<
-!
-ENTITY
-closeCmdGNOME
+We
+believe
+that
+the
+Internet
+should
+be
+open
+public
+and
+accessible
+to
+everyone
+without
+any
+restrictions
 .
-accesskey
-"
-C
 "
 >
 <
 !
 ENTITY
-licenseLinkText
+contribute
+.
+start
+"
+Sound
+interesting
+?
+"
+>
+<
+!
+ENTITY
+contribute
+.
+getInvolvedLink
+"
+Get
+involved
+!
+"
+>
+<
+!
+ENTITY
+contribute
+.
+end
+"
+"
+>
+<
+!
+-
+-
+LOCALIZAION
+NOTE
+(
+bottomLinks
+.
+license
+)
+:
+This
+is
+a
+link
+title
+that
+links
+to
+about
+:
+license
+.
+-
+-
+>
+<
+!
+ENTITY
+bottomLinks
+.
+license
 "
 Licensing
-information
+Information
 "
 >
 <
 !
-ENTITY
-licenseLinkSuffix
-"
+-
+-
+LOCALIZAION
+NOTE
+(
+bottomLinks
 .
+rights
+)
+:
+This
+is
+a
+link
+title
+that
+links
+to
+about
+:
+rights
+.
+-
+-
+>
+<
+!
+ENTITY
+bottomLinks
+.
+rights
+"
+End
+User
+Rights
+"
+>
+<
+!
+-
+-
+LOCALIZAION
+NOTE
+(
+bottomLinks
+.
+privacy
+)
+:
+This
+is
+a
+link
+title
+that
+links
+to
+http
+:
+/
+/
+www
+.
+mozilla
+.
+com
+/
+legal
+/
+privacy
+.
+-
+-
+>
+<
+!
+ENTITY
+bottomLinks
+.
+privacy
+"
+Privacy
+Policy
 "
 >
