--- a/other-licenses/branding/firefox/locales/en-US/brand.dtd
+++ b/other-licenses/branding/firefox/locales/en-US/brand.dtd
@@ -25,60 +25,10 @@ Mozilla
 >
 <
 !
--
--
-LOCALIZATION
-NOTE
-(
-trademarkInfo
-)
-:
-note
-that
-there
-is
-no
-space
-between
-licenseLinkText
-(
-and
-its
-trailing
-licenseLinkSuffix
-entity
-)
-and
-this
-entity
-so
-if
-your
-locale
-needs
-a
-space
-between
-sentences
-you
-need
-to
-put
-it
-at
-the
-start
-of
-this
-entity
-.
--
--
->
-<
-!
 ENTITY
 trademarkInfo
+.
+part1
 "
 Firefox
 and
@@ -92,6 +42,15 @@ the
 Mozilla
 Foundation
 .
+"
+>
+<
+!
+ENTITY
+trademarkInfo
+.
+part2
+"
 Some
 of
 the
