--- a/browser/branding/unofficial/locales/en-US/brand.dtd
+++ b/browser/branding/unofficial/locales/en-US/brand.dtd
@@ -32,59 +32,17 @@ org
 !
 ENTITY
 trademarkInfo
+.
+part1
 "
 "
->
-<
-!
--
--
-LOCALIZATION
-NOTE
-(
-releaseBaseURL
-)
-:
-The
-about
-:
-page
-appends
-__MOZ_APP_VERSION__
-.
-html
-e
-.
-g
-.
-2
-.
-0
-.
-html
--
--
 >
 <
 !
 ENTITY
-releaseBaseURL
+trademarkInfo
+.
+part2
 "
-http
-:
-/
-/
-www
-.
-mozilla
-.
-org
-/
-projects
-/
-devpreview
-/
-releases
-/
 "
 >
