--- a/browser/locales/en-US/chrome/browser/browser.properties
+++ b/browser/locales/en-US/chrome/browser/browser.properties
@@ -2616,3 +2616,66 @@ The
 default
 theme
 .
+#
+About
+Firefox
+Dialog
+#
+LOCALIZATION
+NOTE
+(
+aboutdialog
+.
+released
+)
+:
+%
+1
+S
+=
+year
+%
+2
+S
+=
+month
+#
+%
+3
+S
+=
+day
+.
+These
+are
+just
+numbers
+and
+the
+month
+/
+day
+values
+are
+zero
+-
+padded
+.
+aboutdialog
+.
+released
+=
+(
+released
+%
+2
+S
+-
+%
+3
+S
+-
+%
+1
+S
+)
