Bug 596487 - "Re-add link to about:credits in the about window" [r=gavin ui-r=beltzner a=gavin]
UltraBlame original commit: 017d16925aa131e3783b6abfd267c7595f7a6671

--- a/browser/locales/en-US/chrome/browser/aboutDialog.dtd
+++ b/browser/locales/en-US/chrome/browser/aboutDialog.dtd
@@ -16,7 +16,7 @@ brandFullName
 ENTITY
 community
 .
-start
+start2
 "
 &
 brandShortName
@@ -25,6 +25,40 @@ is
 designed
 by
 "
+>
+<
+!
+-
+-
+LOCALIZATION
+NOTE
+(
+community
+.
+mozillaLink
+)
+:
+This
+is
+a
+link
+title
+that
+links
+to
+http
+:
+/
+/
+www
+.
+mozilla
+.
+org
+/
+.
+-
+-
 >
 <
 !
@@ -43,11 +77,56 @@ vendorShortName
 ENTITY
 community
 .
-end
+middle2
 "
 a
+"
+>
+<
+!
+-
+-
+LOCALIZATION
+NOTE
+(
+community
+.
+creditsLink
+)
+:
+This
+is
+a
+link
+title
+that
+links
+to
+about
+:
+credits
+.
+-
+-
+>
+<
+!
+ENTITY
+community
+.
+creditsLink
+"
 global
 community
+"
+>
+<
+!
+ENTITY
+community
+.
+end2
+"
 working
 together
 to
@@ -89,6 +168,42 @@ interesting
 >
 <
 !
+-
+-
+LOCALIZATION
+NOTE
+(
+contribute
+.
+getInvolvedLink
+)
+:
+This
+is
+a
+link
+title
+that
+links
+to
+http
+:
+/
+/
+www
+.
+mozilla
+.
+org
+/
+contribute
+/
+.
+-
+-
+>
+<
+!
 ENTITY
 contribute
 .
@@ -112,7 +227,7 @@ end
 !
 -
 -
-LOCALIZAION
+LOCALIZATION
 NOTE
 (
 bottomLinks
@@ -150,7 +265,7 @@ Information
 !
 -
 -
-LOCALIZAION
+LOCALIZATION
 NOTE
 (
 bottomLinks
@@ -189,7 +304,7 @@ Rights
 !
 -
 -
-LOCALIZAION
+LOCALIZATION
 NOTE
 (
 bottomLinks
@@ -218,6 +333,7 @@ com
 legal
 /
 privacy
+/
 .
 -
 -
