--- a/services/sync/locales/en-US/sync.properties
+++ b/services/sync/locales/en-US/sync.properties
@@ -402,6 +402,93 @@ tryAgainButton
 accesskey
 =
 S
+warning
+.
+sync
+.
+quota
+.
+label
+=
+Approaching
+Server
+Quota
+warning
+.
+sync
+.
+quota
+.
+description
+=
+You
+are
+approaching
+the
+server
+quota
+.
+Please
+review
+which
+data
+to
+sync
+.
+error
+.
+sync
+.
+quota
+.
+label
+=
+Server
+Quota
+Exceeded
+error
+.
+sync
+.
+quota
+.
+description
+=
+Sync
+failed
+because
+it
+exceeded
+the
+server
+quota
+.
+Please
+review
+which
+data
+to
+sync
+.
+error
+.
+sync
+.
+viewQuotaButton
+.
+label
+=
+View
+Quota
+error
+.
+sync
+.
+viewQuotaButton
+.
+accesskey
+=
+V
 tabs
 .
 fromOtherComputers
