Bug 589979 - Generate username from email address (part 3) [r=mconnor]
Consolidate email and username in the UI.

UltraBlame original commit: a4a5de0399a430c24dd58a89b38d535bcf3d4a52

--- a/services/sync/locales/en-US/errors.properties
+++ b/services/sync/locales/en-US/errors.properties
@@ -23,6 +23,17 @@ synckey
 Wrong
 Sync
 Key
+#
+error
+.
+login
+.
+reason
+.
+password
+is
+deprecated
+.
 error
 .
 login
@@ -33,6 +44,19 @@ password
 =
 Incorrect
 username
+or
+password
+error
+.
+login
+.
+reason
+.
+account
+=
+Incorrect
+account
+name
 or
 password
 error
@@ -184,6 +208,23 @@ change
 .
 synckey
 .
+sameAsEmail
+=
+The
+Sync
+Key
+cannot
+be
+the
+same
+as
+your
+email
+address
+change
+.
+synckey
+.
 tooShort
 =
 The
@@ -234,6 +275,20 @@ match
 your
 user
 name
+change
+.
+password
+.
+pwSameAsEmail
+=
+Password
+can
+'
+t
+match
+your
+email
+address
 change
 .
 password
