Bug 594577 - Sync UI: Get rid of more "secret phrase" occurrences. r=mconnor a=gavin
UltraBlame original commit: 5a102b479e911430a2a8acfeefb2b231e869e8f8

--- a/browser/locales/en-US/chrome/browser/syncGenericChange.properties
+++ b/browser/locales/en-US/chrome/browser/syncGenericChange.properties
@@ -90,7 +90,7 @@ password
 .
 change
 .
-password
+password2
 .
 introText
 =
@@ -116,8 +116,8 @@ user
 name
 or
 your
-secret
-phrase
+Sync
+Key
 .
 change
 .
@@ -182,7 +182,7 @@ please
 wait
 change
 .
-synckey
+synckey2
 .
 error
 =
@@ -193,18 +193,18 @@ error
 while
 changing
 your
-secret
-phrase
+Sync
+Key
 !
 change
 .
-synckey
+synckey2
 .
 success
 =
 Your
-secret
-phrase
+Sync
+Key
 was
 successfully
 changed
@@ -258,7 +258,7 @@ NOTE
 (
 change
 .
-synckey
+synckey2
 .
 warningText
 )
@@ -280,7 +280,7 @@ syncBrand
 dtd
 change
 .
-synckey
+synckey2
 .
 warningText
 =
@@ -304,7 +304,8 @@ data
 secured
 by
 this
-phrase
+Sync
+Key
 .
 Your
 other
