Bug 595854 - Improve Sync pref pane messaging. r=mconnor a=blocking-beta7
UltraBlame original commit: 9d96b34755cf620da40736aadc161d07f17334bc

--- a/browser/locales/en-US/chrome/browser/preferences/preferences.properties
+++ b/browser/locales/en-US/chrome/browser/preferences/preferences.properties
@@ -832,14 +832,18 @@ disconnect
 label
 =
 Disconnect
-differentAccount
+stopUsingAccount
 .
 title
 =
-Use
-a
-Different
-Account
+Do
+you
+want
+to
+stop
+using
+this
+account
 ?
 differentAccount
 .
