Bug 595066 - Sync UI: Ask for email address instead of username. r=mconnor a=blocking-beta7
UltraBlame original commit: 9fe3efa02adf4df9e84b868f805c1dde671a08e8

--- a/browser/locales/en-US/chrome/browser/syncSetup.dtd
+++ b/browser/locales/en-US/chrome/browser/syncSetup.dtd
@@ -239,10 +239,13 @@ server
 ENTITY
 signIn
 .
-username
+account
 .
 label
 "
+Email
+Address
+/
 User
 Name
 "
@@ -252,11 +255,11 @@ Name
 ENTITY
 signIn
 .
-username
+account
 .
 accesskey
 "
-U
+E
 "
 >
 <
