Bug 590754: The 'Install from file' in the add-ons manager needs to be clearer. r=Unfocused, a=dtownsend
UltraBlame original commit: a4c37e52e7537d49a3cc3e176090332818493365

--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
@@ -147,11 +147,14 @@ ons
 <
 !
 ENTITY
-installFromFile
+installAddonFromFile
 .
 label
 "
 Install
+Add
+-
+on
 From
 File
 "
@@ -159,7 +162,7 @@ File
 <
 !
 ENTITY
-installFromFile
+installAddonFromFile
 .
 accesskey
 "
