Bug 559942 - RE-LAND- Heuristic to pick default HTTP cache size.  r=dwitte, gavin, ui=limi, a=blocks-beta7
UltraBlame original commit: 765e7c4a715acb33a5386062e6635237afdfeb6d

--- a/browser/locales/en-US/chrome/browser/preferences/advanced.dtd
+++ b/browser/locales/en-US/chrome/browser/preferences/advanced.dtd
@@ -492,6 +492,25 @@ C
 <
 !
 ENTITY
+smartSizeCache
+.
+label
+"
+Let
+&
+brandShortName
+;
+manage
+the
+size
+of
+my
+cache
+"
+>
+<
+!
+ENTITY
 updateTab
 .
 label
