Bug 562790: Support the add-ons marketplace in the add-ons manager (strings only). r=Unfocused, a=blocks-beta7
UltraBlame original commit: 7676e2b0fea0f968a78b31191b253be3a377fb16

--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
@@ -1051,6 +1051,48 @@ I
 >
 <
 !
+-
+-
+LOCALIZATION
+NOTE
+(
+cmd
+.
+purchaseAddon
+.
+accesskey
+)
+:
+The
+access
+key
+for
+cmd
+.
+purchaseAddon
+.
+label
+in
+extensions
+.
+properties
+-
+-
+>
+<
+!
+ENTITY
+cmd
+.
+purchaseAddon
+.
+accesskey
+"
+u
+"
+>
+<
+!
 ENTITY
 cmd
 .
@@ -1754,6 +1796,32 @@ relevance
 <
 !
 ENTITY
+sort
+.
+price
+.
+label
+"
+Price
+"
+>
+<
+!
+ENTITY
+sort
+.
+price
+.
+tooltip
+"
+Sort
+by
+price
+"
+>
+<
+!
+ENTITY
 search
 .
 filter2
@@ -2112,6 +2180,58 @@ install
 tooltip
 "
 Install
+this
+add
+-
+on
+"
+>
+<
+!
+-
+-
+LOCALIZATION
+NOTE
+(
+cmd
+.
+purchaseAddon
+.
+accesskey
+)
+:
+The
+tooltip
+for
+addon
+.
+purchase
+.
+label
+in
+extensions
+.
+properties
+-
+-
+>
+<
+!
+ENTITY
+addon
+.
+purchase
+.
+tooltip
+"
+Visit
+the
+add
+-
+ons
+gallery
+to
+purchase
 this
 add
 -
