--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.properties
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.properties
@@ -1048,3 +1048,87 @@ all
 #
 1
 results
+#
+LOCALIZATION
+NOTE
+(
+addon
+.
+purchase
+.
+label
+)
+displayed
+on
+a
+button
+in
+the
+list
+#
+view
+%
+S
+is
+the
+price
+of
+the
+add
+-
+on
+including
+currency
+symbol
+addon
+.
+purchase
+.
+label
+=
+Purchase
+for
+%
+S
+#
+LOCALIZATION
+NOTE
+(
+cmd
+.
+purchaseAddon
+.
+label
+)
+displayed
+on
+a
+button
+in
+the
+detail
+#
+view
+%
+S
+is
+the
+price
+of
+the
+add
+-
+on
+including
+currency
+symbol
+cmd
+.
+purchaseAddon
+.
+label
+=
+Purchase
+for
+%
+S
