Bug 590756 - The 'Update Add-ons Now' entry in the add-ons manager sounds as if updates were found and ready to be installed; r=bmcbride ui-r=limi a=dtownsend
UltraBlame original commit: cc85eaa0817239238978ad1f1aac63b24deafa40

--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.dtd
@@ -527,15 +527,13 @@ updates
 ENTITY
 updates
 .
-updateAddonsNow
+checkForUpdates
 .
 label
 "
-Update
-Add
--
-ons
-Now
+Check
+for
+Updates
 "
 >
 <
@@ -543,11 +541,11 @@ Now
 ENTITY
 updates
 .
-updateAddonsNow
+checkForUpdates
 .
 accesskey
 "
-U
+C
 "
 >
 <
