Bug 593535 - Failure to download extension causes about:addons to list the addon with no way to restart the download (strings only); r=dtownsend, a=blocks-beta7
UltraBlame original commit: bbd9ee911c092e75be88fd2166e7957a7d7beb9a

--- a/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.properties
+++ b/toolkit/locales/en-US/chrome/mozapps/extensions/extensions.properties
@@ -489,6 +489,164 @@ S
 LOCALIZATION
 NOTE
 (
+notification
+.
+downloadError
+)
+%
+1
+S
+is
+the
+add
+-
+on
+name
+.
+Not
+yet
+implemented
+-
+see
+https
+:
+/
+/
+bug593535
+.
+bugzilla
+.
+mozilla
+.
+org
+/
+attachment
+.
+cgi
+?
+id
+=
+475403
+notification
+.
+downloadError
+=
+There
+was
+an
+error
+downloading
+%
+1
+S
+.
+notification
+.
+downloadError
+.
+retry
+=
+Try
+again
+notification
+.
+downloadError
+.
+retry
+.
+tooltip
+=
+Try
+downloading
+this
+add
+-
+on
+again
+#
+LOCALIZATION
+NOTE
+(
+notification
+.
+installError
+)
+%
+1
+S
+is
+the
+add
+-
+on
+name
+.
+Not
+yet
+implemented
+-
+see
+https
+:
+/
+/
+bug593535
+.
+bugzilla
+.
+mozilla
+.
+org
+/
+attachment
+.
+cgi
+?
+id
+=
+475403
+notification
+.
+installError
+=
+There
+was
+an
+error
+installing
+%
+1
+S
+.
+notification
+.
+installError
+.
+retry
+=
+Try
+again
+notification
+.
+installError
+.
+retry
+.
+tooltip
+=
+Try
+downloading
+and
+installing
+this
+add
+-
+on
+again
+#
+LOCALIZATION
+NOTE
+(
 contributionAmount
 )
 %
